<resources>
    <string name="app_name">E Audio Player</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="genres">Genres</string>
    <string name="buyMusic">Buy Music</string>
    <string name="title_activity_eaudio_player">EAudioPlayer</string>
    <string name="endless">Endless</string>
    <string name="by_zara_larsson">By Zara Larsson</string>
    <string name="shape_of_you">Shape Of You</string>
    <string name="by_ed_sheeran">By Ed Sheeran</string>
    <string name="shape_of_you_ed_sheeran">Shape Of You - Ed Sheeran</string>
    <string name="my_clasic_collection">My Clasic Collection</string>
    <string name="absolute_mega_mix_collection">Absolute Mega Mix Collection</string>
    <string name="rock_favourites">Rock Favourites</string>
    <string name="swedish_collection">Swedish Collection</string>
    <string name="title_activity_buy_music">Buy Music</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="pay_with_a_card">Pay with a card</string>
    <string name="pay_with_simplify">Pay with Simplify</string>
    <string name="confirm">Confirm</string>
    <string name="careless_whisper">Careless Whisper</string>
    <string name="by_george_michael">By George Michael</string>
</resources>
