<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/materialbg"
    android:orientation="vertical"
    tools:context="com.example.android.eaudioplayer.Playlists">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:background="@color/accent"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/toolbarText">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/musicEAudioPlayerList1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#565656"
                android:drawableLeft="@drawable/ic_star_white"
                android:onClick="openEAudioPlayer"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/my_clasic_collection"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/musicEAudioPlayerList2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#565656"
                android:drawableLeft="@drawable/ic_star_white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/rock_favourites"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/musicEAudioPlayerList3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#565656"
                android:drawableLeft="@drawable/ic_star_white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/absolute_mega_mix_collection"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/musicEAudioPlayerList4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#565656"
                android:drawableLeft="@drawable/ic_star_white"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/swedish_collection"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:padding="15dp"
        android:text="These are the users playlists!"
        android:textSize="20sp" />

</LinearLayout>
